--- a/index.html
+++ b/index.html
@@ -24,6 +24,41 @@
     </head>
 
 <body>
+<div class="container">
+     
+  <div class="design">
+       <span> <img src="/images/index-design-background.png" class="design__background"/>
+          <h3> Hi!</h3>
+          <h1>I am</h1>
+          <h2> Designer</h2>
+        </span>
+    </div>
+      
+  
+  <div class="skew dev">
+    <h1> Audrey</h1>
+    <h2> Developer</h2>
+     </div>
+</div>
+
+<!--<div class="container-fluid">
+  <div class="row mt-5">
+    <div class="col-md-6">
+      <h3> Hi!</h3>
+      <h1>I am</h1>
+      <h2> Designer</h2>
+    </div>
+    <div class="col-md-6">
+      <h1> Audrey</h1>
+      <h2> Developer</h2>
+    </div>
+  </div>
+</div>-->
+
+
+
+
+
 </body>
 
 </html>
