Started titles and layout

--- a/index.html
+++ b/index.html
@@ -20,42 +20,89 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Spinnaker&display=swap" rel="stylesheet">
-<script src="https://kit.fontawesome.com/b013160931.js" crossorigin="anonymous"></script>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     </head>
 
 <body>
-<div class="container">
-     
-  <div class="design">
-       <span> <img src="/images/index-design-background.png" class="design__background"/>
-          <h3> Hi!</h3>
-          <h1>I am</h1>
-          <h2> Designer</h2>
-        </span>
+<div class="container-fluid">
+  <div class="row mt-5 intro">
+    <div class="col-md-6 design">
+<h2 class="designer mb-3">Hey </h2>
+<h1 class="designer"> I am</h1>
+ <i class="material-icons" id="pencil">draw</i>
+<h3 class="designer">Designer</h3>
+<p class="designer">Experienced graphic designer,visual whiz and brand creator  </p>
     </div>
-      
-  
-  <div class="skew dev">
-    <h1> Audrey</h1>
-    <h2> Developer</h2>
-     </div>
+<div class="col-md-6 dev">
+  <h2 class="developer mb-3">there! </h2>
+  <h1 class="developer"> Audrey</h1>
+<i class="material-icons" id="code">code</i>
+  <h3 class="developer">Developer</h3>
+  <p class="developer">Experienced front end coder for responsive websites and web apps</p>
 </div>
 
-<!--<div class="container-fluid">
+
+</div>
+<div class="navigation-links">
+  <a href="about.html#contact" class="contact-link">Contact me</a>
+  <a href="about.html" class="about-link">About me</a>
+</div>
+<div class="container-fluid">
   <div class="row mt-5">
     <div class="col-md-6">
-      <h3> Hi!</h3>
-      <h1>I am</h1>
-      <h2> Designer</h2>
+      <img src="images/yoga.png" alt="yoga image" class="img-fluid rounded" />
     </div>
     <div class="col-md-6">
-      <h1> Audrey</h1>
-      <h2> Developer</h2>
+      <h2 class="blog-title mb-3">Yoga app</h2>
+      <p class="blog">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+        quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+        eos eveniet alias temporibus deserunt veritatis minima fugiat
+        explicabo eum dolore.
+      </p>
+      <div>
+        <a href="#" class="btn btn-primary pt-3 pb-3" role="button">
+          Launch Yoga app</a>
+      </div>
     </div>
   </div>
-</div>-->
-
-
+  <div class="row mt-5">
+    <div class="col-md-6">
+      <h2 class="blog-title mb-3">Weather app</h2>
+      <p class="blog">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+        quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+        eos eveniet alias temporibus deserunt veritatis minima fugiat
+        explicabo eum dolore.
+      </p>
+      <div class="mt-5">
+        <a href="#" class="btn btn-primary pt-3 pb-3" role="button">
+          Launch Weather app</a>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <img src="images/weather.png" alt="weather image" class="img-fluid rounded" />
+    </div>
+  </div>
+  <div class="row mt-5">
+    <div class="col-md-6">
+      <img src="images/yogurt.png" alt="yogurt image" class="img-fluid rounded" />
+    </div>
+    <div class="col-md-6">
+      <h2 class="blog-title mb-3">Yogurt app</h2>
+      <p class="blog">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+        quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+        eos eveniet alias temporibus deserunt veritatis minima fugiat
+        explicabo eum dolore.
+      </p>
+      <div class="mt-5">
+        <a href="#" class="btn btn-primary pt-3 pb-3" role="button">
+          Launch Yogurt app</a>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 
