First half of home page complete

--- a/index.html
+++ b/index.html
@@ -25,32 +25,34 @@
 
 <body>
 <div class="container-fluid">
-  <div class="row mt-5 intro">
-    <div class="col-md-6 design">
+  <div class="row mt-5 g-0 intro">
+    <div class="col-md-6 px-0 design">
 <h2 class="designer mb-3">Hey </h2>
 <h1 class="designer"> I am</h1>
- <i class="material-icons" id="pencil">draw</i>
+<p><img src="/images/Colour-half.png" alt="half logo colour" class="image-fluid logo-intro"/></p>
 <h3 class="designer">Designer</h3>
-<p class="designer">Experienced graphic designer,visual whiz and brand creator  </p>
+<p class="designer">Experienced graphic designer, visual whiz and brand creator  </p>
     </div>
-<div class="col-md-6 dev">
+<div class="col-md-6 px-0 dev">
   <h2 class="developer mb-3">there! </h2>
   <h1 class="developer"> Audrey</h1>
-<i class="material-icons" id="code">code</i>
+<p><img src="/images/colour-other-half.png" alt=" second half logo colour" class="image-fluid logo-intro-2" /></p>
   <h3 class="developer">Developer</h3>
-  <p class="developer">Experienced front end coder for responsive websites and web apps</p>
+  <p class="developer">Experienced front end coder of responsive websites and web apps</p>
 </div>
+  </div>
+<div class="row mt-2 g-0">
+  <div class="col-md-12  contact-button">
+  <a href="#" class="contact-link">Get in touch</a> <!--about.html#contact-->
+    </div>
+    </div>
 
-
 </div>
-<div class="navigation-links">
-  <a href="about.html#contact" class="contact-link">Contact me</a>
-  <a href="about.html" class="about-link">About me</a>
-</div>
+<div class="title"> <h3 class="title">Projects highlights</h3></div>
 <div class="container-fluid">
   <div class="row mt-5">
     <div class="col-md-6">
-      <img src="images/yoga.png" alt="yoga image" class="img-fluid rounded" />
+      <img src="images/yoga.png" alt="yoga image" class="img-fluid rounded contact-link" />
     </div>
     <div class="col-md-6">
       <h2 class="blog-title mb-3">Yoga app</h2>
