--- a/about.html
+++ b/about.html
@@ -23,6 +23,14 @@
     </head>
 
 <body>
+
+
+
+
+  <div id="contact">
+    <h2>📮 Contact me</h2>
+    <a href="mailto:audrey@creafixdesign.com" class="email-link"> audrey@creafixdesign.com </a>
+  </div>
 </body>
 
 </html>
