Start project highlights

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
 <div class="title"> <h3 class="title">Projects highlights</h3></div>
 <div class="container-fluid">
   <div class="row mt-5">
-    <div class="col-md-6">
-      <img src="images/yoga.png" alt="yoga image" class="img-fluid rounded contact-link" />
+    <div class="col-md-6 bg-color">
+      <img src="images/Weather-app.png" alt="weather app image" class="img-fluid rounded sample-img" />
     </div>
     <div class="col-md-6">
-      <h2 class="blog-title mb-3">Yoga app</h2>
+      <h2 class="blog-title mb-3">Weather app</h2>
       <p class="blog">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
         quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
@@ -70,7 +70,7 @@
   </div>
   <div class="row mt-5">
     <div class="col-md-6">
-      <h2 class="blog-title mb-3">Weather app</h2>
+      <h2 class="blog-title mb-3">Catalogue design</h2>
       <p class="blog">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
         quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
@@ -82,8 +82,8 @@
           Launch Weather app</a>
       </div>
     </div>
-    <div class="col-md-6">
-      <img src="images/weather.png" alt="weather image" class="img-fluid rounded" />
+    <div class="col-md-6 bg-color">
+      <img src="images/weather.png" alt="weather image" class="img-fluid rounded sample-img" />
     </div>
   </div>
   <div class="row mt-5">
