Added content and styling

--- a/index.html
+++ b/index.html
@@ -21,20 +21,43 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Spinnaker&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<meta name="viewport" content="width-device-width, initial-scale=1.0">
     </head>
 
 <body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <div class="container-fluid">
+      <a class="logo" href="#">Audrey Chevillat</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">About me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about.html#contact">Contact me</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 <div class="container-fluid">
   <div class="row mt-5 g-0 intro">
-    <div class="col-md-6 px-0 design">
-<h2 class="designer mb-3">Hey </h2>
+    <div class="col-6 px-0 design">
+<h2 class="designer ">Hey </h2>
 <h1 class="designer"> I am</h1>
 <p><img src="/images/Colour-half.png" alt="half logo colour" class="image-fluid logo-intro"/></p>
 <h3 class="designer">Designer</h3>
 <p class="designer">Experienced graphic designer, visual whiz and brand creator  </p>
     </div>
-<div class="col-md-6 px-0 dev">
-  <h2 class="developer mb-3">there! </h2>
+<div class="col-6 px-0 dev">
+  <h2 class="developer ">there! </h2>
   <h1 class="developer"> Audrey</h1>
 <p><img src="/images/colour-other-half.png" alt=" second half logo colour" class="image-fluid logo-intro-2" /></p>
   <h3 class="developer">Developer</h3>
@@ -42,69 +65,68 @@
 </div>
   </div>
 <div class="row mt-2 g-0">
-  <div class="col-md-12  contact-button">
+  <div class="col-12  contact-button">
   <a href="#" class="contact-link">Get in touch</a> <!--about.html#contact-->
     </div>
     </div>
-
 </div>
 <div class="title"> <h3 class="title">Projects highlights</h3></div>
-<div class="container-fluid">
-  <div class="row mt-5">
-    <div class="col-md-6 bg-color">
-      <img src="images/Weather-app.png" alt="weather app image" class="img-fluid rounded sample-img" />
-    </div>
-    <div class="col-md-6">
-      <h2 class="blog-title mb-3">Weather app</h2>
-      <p class="blog">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-        quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-        eos eveniet alias temporibus deserunt veritatis minima fugiat
-        explicabo eum dolore.
+<div class="container-fluid ">
+  <div class="web-dev">
+  <div class="row mt-2 mb-1 h-100">
+    <div class="col-sm-5">
+      <h1 class="work-type"> ◼ Web development</h1>
+      <h2 class="work-title mb-2 ">Weather app</h2>
+      <p class="work-desc mb-1">
+        Design and coding of a web app integrating API to provide live weather update.
       </p>
-      <div>
-        <a href="#" class="btn btn-primary pt-3 pb-3" role="button">
-          Launch Yoga app</a>
+
+    </div>
+    <div class="col-sm-7 mt-1 ">
+      <div class="container bg-color">
+      <img src="images/Weather-app.png" alt="weather app image" class="img-fluid rounded sample-img" width="700"/>
       </div>
     </div>
   </div>
-  <div class="row mt-5">
-    <div class="col-md-6">
-      <h2 class="blog-title mb-3">Catalogue design</h2>
-      <p class="blog">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-        quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-        eos eveniet alias temporibus deserunt veritatis minima fugiat
-        explicabo eum dolore.
-      </p>
-      <div class="mt-5">
-        <a href="#" class="btn btn-primary pt-3 pb-3" role="button">
-          Launch Weather app</a>
+  </div></div>
+<div class="container-fluid ">
+  <div class="print-dev">
+    <div class="row mt-2 mb-1 h-100">
+      <div class="col-sm-5">
+        <h1 class="work-type"> ◼ Print design</h1>
+        <h2 class="work-title mb-2 ">Intech catalogue</h2>
+        <p class="work-desc mb-1">
+          Creation of a multi category product catalogue template.
+        </p>
+
       </div>
-    </div>
-    <div class="col-md-6 bg-color">
-      <img src="images/weather.png" alt="weather image" class="img-fluid rounded sample-img" />
-    </div>
-  </div>
-  <div class="row mt-5">
-    <div class="col-md-6">
-      <img src="images/yogurt.png" alt="yogurt image" class="img-fluid rounded" />
-    </div>
-    <div class="col-md-6">
-      <h2 class="blog-title mb-3">Yogurt app</h2>
-      <p class="blog">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-        quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-        eos eveniet alias temporibus deserunt veritatis minima fugiat
-        explicabo eum dolore.
-      </p>
-      <div class="mt-5">
-        <a href="#" class="btn btn-primary pt-3 pb-3" role="button">
-          Launch Yogurt app</a>
+      <div class="col-sm-7 mt-1 ">
+        <div class="container bg-color">
+          <img src="images/Intech catalogue template.PNG" alt="catalogue template Intech image" class="img-fluid rounded sample-img" width="300" />
+        </div>
       </div>
     </div>
   </div>
 </div>
+  <div class="container-fluid ">
+    <div class="web-dev">
+      <div class="row mt-2 mb-1 h-100">
+        <div class="col-sm-5">
+          <h1 class="work-type"> ◼ Web development</h1>
+          <h2 class="work-title mb-2 ">Casting technology NZ new website</h2>
+          <p class="work-desc mb-1">
+            Design and creation of a website using CMS allowing easy clients updates using database for member management.
+          </p>
+  
+        </div>
+        <div class="col-sm-7 mt-1 ">
+          <div class="container bg-color">
+            <img src="images/CTNZ website-min.PNG" alt="Casting technology website image" class="img-fluid rounded sample-img" width="400" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 
