Removed nav bar - not customised yet

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Visual design and web development - Creafix Design
   </title>
   <meta charset="UTF-8" />
-  <meta name="description" content="insert here" >
+  <meta name="description" content="Welcome to Creafix Design, have a look at what we do and check out a selection of projects we've worked on!" >
 
   <link href="src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
@@ -25,7 +25,7 @@
     </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+ <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container-fluid">
       <a class="logo" href="#">Audrey Chevillat</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -46,7 +46,7 @@
         </ul>
       </div>
     </div>
-  </nav>
+  </nav> -->
 <div class="container-fluid">
   <div class="row mt-5 g-0 intro">
     <div class="col-6 px-0 design">
