Resolve images scaling issues

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <div class="container-fluid ">
   <div class="web-dev">
   <div class="row mt-2 mb-1 h-100">
-    <div class="col-sm-5">
+    <div class="col-md-5">
       <h1 class="work-type"> ◼ Web development</h1>
       <h2 class="work-title mb-2 ">Weather app</h2>
       <p class="work-desc mb-1">
@@ -82,17 +82,17 @@
       </p>
 
     </div>
-    <div class="col-sm-7 mt-1 ">
+    <div class="col-md-7 mt-1 ">
       <div class="container bg-color">
-      <img src="images/Weather-app.png" alt="weather app image" class="img-fluid rounded sample-img" width="700"/>
+      <img src="images/Weather-app.png" alt="weather app image" class="img-fluid rounded sample-img"/>
       </div>
     </div>
   </div>
   </div></div>
 <div class="container-fluid ">
   <div class="print-dev">
-    <div class="row mt-2 mb-1 h-100">
-      <div class="col-sm-5">
+    <div class="row mt-3 mb-3  h-100">
+      <div class="col-md-5">
         <h1 class="work-type"> ◼ Print design</h1>
         <h2 class="work-title mb-2 ">Intech catalogue</h2>
         <p class="work-desc mb-1">
@@ -100,9 +100,9 @@
         </p>
 
       </div>
-      <div class="col-sm-7 mt-1 ">
+      <div class="col-md-7 mt-1 ">
         <div class="container bg-color">
-          <img src="images/Intech catalogue template.PNG" alt="catalogue template Intech image" class="img-fluid rounded sample-img" width="300" />
+          <img src="images/Intech catalogue template.PNG" alt="catalogue template Intech image" class="img-fluid rounded sample-img" width="300"  />
         </div>
       </div>
     </div>
@@ -110,8 +110,8 @@
 </div>
   <div class="container-fluid ">
     <div class="web-dev">
-      <div class="row mt-2 mb-1 h-100">
-        <div class="col-sm-5">
+      <div class="row mt-3 mb-1 h-100">
+        <div class="col-md-5">
           <h1 class="work-type"> ◼ Web development</h1>
           <h2 class="work-title mb-2 ">Casting technology NZ new website</h2>
           <p class="work-desc mb-1">
@@ -119,9 +119,9 @@
           </p>
   
         </div>
-        <div class="col-sm-7 mt-1 ">
+        <div class="col-md-7 mt-1 ">
           <div class="container bg-color">
-            <img src="images/CTNZ website-min.PNG" alt="Casting technology website image" class="img-fluid rounded sample-img" width="400" />
+            <img src="images/CTNZ website-min.PNG" alt="Casting technology website image" class="img-fluid rounded sample-img"  />
           </div>
         </div>
       </div>
