--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
     </div>
     </div>
 </div>
+<div class="top-line-title"></div>
 <div class="title"> <h3 class="title">Projects highlights</h3></div>
+<div class="bottom-line-title"></div>
 <div class="container-fluid ">
   <div class="web-dev">
   <div class="row mt-2 mb-1 h-100">
@@ -102,7 +104,7 @@
       </div>
       <div class="col-md-7 mt-1 ">
         <div class="container bg-color">
-          <img src="images/Intech catalogue template.PNG" alt="catalogue template Intech image" class="img-fluid rounded sample-img" width="300"  />
+          <img src="images/Intech catalogue.jpg" alt="catalogue template Intech image" class="img-fluid rounded sample-img" width="400" height="250"  />
         </div>
       </div>
     </div>
