--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </head>
 
 <body>
- <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+ <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container-fluid">
       <a class="logo" href="#">Audrey Chevillat</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -46,7 +46,7 @@
         </ul>
       </div>
     </div>
-  </nav> -->
+  </nav> 
 <div class="container-fluid">
   <div class="row mt-5 g-0 intro">
     <div class="col-6 px-0 design">
@@ -69,6 +69,47 @@
   <a href="#" class="contact-link">Get in touch</a> <!--about.html#contact-->
     </div>
     </div>
+</div>
+
+<div class="top-line-title"></div>
+<div class="title">
+  <h3 class="title">About me</h3>
+</div>
+<div class="bottom-line-title"></div>
+<div class="container-fluid ">
+  <div class="about-box">
+    <h2 class="bio-title mb-2 ">Who am I?</h2>
+    <div class="row mt-2 mb-1 h-100">
+      <div class="col-md-5  ">
+         <div class="bio-container">
+          <img src="images/Photo Profile.jpg" alt="profile picture" class="img-fluid rounded profile"/>
+        </div>
+      </div>
+      <div class="col-md-7">     
+        <p class="bio-highlight mb-1">
+          French born engineer turned visual designer and front end developer who's happy to call New Zealand home.</p>
+        <p class="bio mb-1">
+          I am passionate about design and digital technologies; I love to know how things work (hello engineering brain!) but
+          also make things functional for users and pleasing to the eye (hello creative brain!). Being able to combine these two
+          sides of my brain has been a revelation and encouraged me to start Creafix Design.
+          The desire to help businesses create media that helps promote brands, products and information to their customers is the
+          foundation or "raison de vivre" of Creafix Design.😃</p><br/>
+          <p class="bio mb-1">
+          I have been working as a product designer for a number of years, focusing heavily on analysing problems and identifying
+          users needs.
+          This is the reason why I love getting to know my clients personally and being part of their projects or business ideas
+          as I believe it is the key to identifying the essence of their business and reaching out to their ideal audience.
+          </p> <br />
+          <p class="bio mb-1">
+          I'm happiest when I'm creating, learning, exploring and thinking about how to make things better. Currently, I am
+          available to take on new freelance work, feel free to reach out and say hello even if you haven't got a project in mind
+          yet!
+        </p>
+
+      </div>
+      
+    </div>
+  </div>
 </div>
 <div class="top-line-title"></div>
 <div class="title"> <h3 class="title">Projects highlights</h3></div>
@@ -129,8 +170,87 @@
       </div>
     </div>
   </div>
+  <div class="container-fluid ">
+    <div class="brand-dev">
+      <div class="row mt-3 mb-1 h-100">
+        <div class="col-md-5">
+          <h1 class="work-type"> ◼ Brand development</h1>
+          <h2 class="work-title mb-2 ">Hero Car Groomers Limited</h2>
+          <p class="work-desc mb-1">
+            Creation of brand identity for local car grooming business.
+          </p>
+  
+        </div>
+        <div class="col-md-7 mt-1 ">
+          <div class="container bg-color">
+            <img src="images/Hero Car Groomers Logo-min.png" alt="Hero car groomers logo"
+              class="img-fluid rounded sample-img" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+<div class="container-fluid ">
+  <div class="web-dev">
+    <div class="row mt-3 mb-1 h-100">
+      <div class="col-md-5">
+        <h1 class="work-type"> ◼ Web development</h1>
+        <h2 class="work-title mb-2 ">Real Rack first website</h2>
+        <p class="work-desc mb-1">
+          Design and creation of Real Rack's first business website using CMS allowing basic order function without overheads of
+          e-commerce.
+        </p>
 
+      </div>
+      <div class="col-md-7 mt-1 ">
+        <div class="container bg-color">
+          <img src="images/RealRack website-min.PNG" alt="Real Rack first website"
+            class="img-fluid rounded sample-img" />
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container-fluid ">
+  <div class="print-dev">
+    <div class="row mt-3 mb-3  h-100">
+      <div class="col-md-5">
+        <h1 class="work-type"> ◼ Print design</h1>
+        <h2 class="work-title mb-2 ">Physio on Cashel</h2>
+        <p class="work-desc mb-1">
+          Creation of letter head email signature and flyer following existing branding.
+        </p>
 
+      </div>
+      <div class="col-md-7 mt-1 ">
+        <div class="container bg-color">
+          <img src="images/Physio on Cashel email signature-min.PNG" alt="email signature for Physio on Cashel"
+            class="img-fluid rounded sample-img" width="400" height="250" />
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container-fluid ">
+  <div class="brand-dev">
+    <div class="row mt-3 mb-1 h-100">
+      <div class="col-md-5">
+        <h1 class="work-type"> ◼ Brand development</h1>
+        <h2 class="work-title mb-2">DISA Solutions Ltd</h2>
+        <p class="work-desc mb-1">
+          Creation of functional document templates and additional logo following current company branding.
+        </p>
+
+      </div>
+      <div class="col-md-7 mt-1 ">
+        <div class="container bg-color">
+          <img src="images/Motorbike logo DISA Solutions.PNG" alt="Disa valuation logo"
+            class="img-fluid rounded sample-img" />
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 </body>
 
