Added work and services page

--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
   <ul class="menu">
 <li class="logo"> <a href="index.html"><img src="/images/Creafix logo white simple.png" alt="creafix design logo" width="150"/></a></li>
 <li class="item"> <a href="index.html#about">About</a></li>
-<li class="item"> <a href="index.html#work">Work</a></li>
+<li class="item"> <a href="mywork.html">Work</a></li>
+<li class="item"> <a href="services.html">Services</a></li>
 <li class="item"> <a href="index.html#contact">Contact</a></li>
 <li class="toggle"> <span class="bars"></span></li>
 
@@ -189,87 +190,7 @@
       </div>
     </div>
   </div>
-  <div class="container-fluid ">
-    <div class="brand-dev">
-      <div class="row mt-3 mb-1 h-100">
-        <div class="col-md-5">
-          <h1 class="work-type"> ◼ Brand development</h1>
-          <h2 class="work-title mb-2 ">Hero Car Groomers Limited</h2>
-          <p class="work-desc mb-1">
-            Creation of brand identity for local car grooming business.
-          </p>
-  
-        </div>
-        <div class="col-md-7 mt-1 ">
-          <div class="container bg-color">
-            <img src="images/Hero Car Groomers Logo-min.png" alt="Hero car groomers logo"
-              class="img-fluid rounded sample-img" />
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-<div class="container-fluid ">
-  <div class="web-dev">
-    <div class="row mt-3 mb-1 h-100">
-      <div class="col-md-5">
-        <h1 class="work-type"> ◼ Web development</h1>
-        <h2 class="work-title mb-2 ">Real Rack first website</h2>
-        <p class="work-desc mb-1">
-          Design and creation of Real Rack's first business website using CMS allowing basic order function without overheads of
-          e-commerce.
-        </p>
 
-      </div>
-      <div class="col-md-7 mt-1 ">
-        <div class="container bg-color">
-          <img src="images/RealRack website-min.PNG" alt="Real Rack first website"
-            class="img-fluid rounded sample-img" />
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="container-fluid ">
-  <div class="print-dev">
-    <div class="row mt-3 mb-3  h-100">
-      <div class="col-md-5">
-        <h1 class="work-type"> ◼ Print design</h1>
-        <h2 class="work-title mb-2 ">Physio on Cashel</h2>
-        <p class="work-desc mb-1">
-          Creation of letter head email signature and flyer following existing branding.
-        </p>
-
-      </div>
-      <div class="col-md-7 mt-1 ">
-        <div class="container bg-color">
-          <img src="images/Physio on Cashel email signature-min.PNG" alt="email signature for Physio on Cashel"
-            class="img-fluid rounded sample-img" width="400" height="250" />
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="container-fluid ">
-  <div class="brand-dev">
-    <div class="row mt-3 mb-1 h-100">
-      <div class="col-md-5">
-        <h1 class="work-type"> ◼ Brand development</h1>
-        <h2 class="work-title mb-2">DISA Solutions Ltd</h2>
-        <p class="work-desc mb-1">
-          Creation of functional document templates and additional logo following current company branding.
-        </p>
-
-      </div>
-      <div class="col-md-7 mt-1 ">
-        <div class="container bg-color">
-          <img src="images/Motorbike logo DISA Solutions.PNG" alt="Disa valuation logo"
-            class="img-fluid rounded sample-img" />
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 
 <div class="top-line-title" id="contact"></div>
 <div class="title">
