--- a/mywork.html
+++ b/mywork.html
@@ -4,25 +4,221 @@
 <head>
   <title>Check out what I've worked on so far - Creafix Design
   </title>
+
   <meta charset="UTF-8" />
-<meta name="description" content="insert here">
+  <meta name="description"
+    content="Welcome to Creafix Design, have a look at what we do and check out a selection of projects we've worked on!">
+
   <link href="src/styles.css" rel="stylesheet" type="text/css" />
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Jura:wght@500&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Spinnaker&display=swap" rel="stylesheet">
-<script src="https://kit.fontawesome.com/b013160931.js" crossorigin="anonymous"></script>
-    </head>
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Jura:wght@500&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Spinnaker&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <meta name="viewport" content="width-device-width, initial-scale=1.0">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script>
+    var num = 200; //number of pixels before modifying styles
+
+    $(window).bind("scroll", function () {
+      if ($(window).scrollTop() > num) {
+        $(".menu").addClass("fixed");
+      } else {
+        $(".menu").removeClass("fixed");
+      }
+    });
+
+    $(function () {
+      $(".toggle").on("click", function () {
+        if ($(".item").hasClass("active")) {
+          $(".item").removeClass("active");
+        }
+        else {
+          $(".item").addClass("active");
+        }
+      })
+    });
+
+  </script>
+</head>
 
 <body>
+  <nav>
+    <ul class="menu">
+      <li class="logo"> <a href="index.html"><img src="/images/Creafix logo white simple.png" alt="creafix design logo"
+            width="150" /></a></li>
+      <li class="item"> <a href="index.html#about">About</a></li>
+      <li class="item"> <a href="mywork.html">Work</a></li>
+      <li class="item"> <a href="services.html">Services</a></li>
+      <li class="item"> <a href="index.html#contact">Contact</a></li>
+      <li class="toggle"> <span class="bars"></span></li>
+  
+  
+    </ul>
+  </nav>
+
+<div class="top-line-title" id="about"></div>
+<div class="title">
+  <h3 class="title">Projects</h3>
+</div>
+
+<div class="bottom-line-title"></div>
+<div class="container-fluid ">
+  <div class="web-dev">
+    <div class="row mt-2 mb-1 h-100">
+      <div class="col-md-5">
+        <h1 class="work-type"> ◼ Web development</h1>
+        <h2 class="work-title mb-2 ">Weather app</h2>
+        <p class="work-desc mb-1">
+          Design and coding of a web app integrating API to provide live weather update.
+        </p>
+
+      </div>
+      <div class="col-md-7 mt-1 ">
+        <div class="container bg-color">
+          <img src="images/Weather-app.png" alt="weather app image" class="img-fluid rounded sample-img" />
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container-fluid ">
+  <div class="print-dev">
+    <div class="row mt-3 mb-3  h-100">
+      <div class="col-md-5">
+        <h1 class="work-type"> ◼ Print design</h1>
+        <h2 class="work-title mb-2 ">Intech catalogue</h2>
+        <p class="work-desc mb-1">
+          Creation of a multi category product catalogue template.
+        </p>
+
+      </div>
+      <div class="col-md-7 mt-1 ">
+        <div class="container bg-color">
+          <img src="images/Intech catalogue.jpg" alt="catalogue template Intech image"
+            class="img-fluid rounded sample-img" width="400" height="250" />
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container-fluid ">
+  <div class="web-dev">
+    <div class="row mt-3 mb-1 h-100">
+      <div class="col-md-5">
+        <h1 class="work-type"> ◼ Web development</h1>
+        <h2 class="work-title mb-2 ">Casting technology NZ new website</h2>
+        <p class="work-desc mb-1">
+          Design and creation of a website using CMS allowing easy clients updates using database for member management.
+        </p>
+
+      </div>
+      <div class="col-md-7 mt-1 ">
+        <div class="container bg-color">
+          <img src="images/CTNZ website-min.PNG" alt="Casting technology website image"
+            class="img-fluid rounded sample-img" />
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+  <div class="container-fluid ">
+    <div class="brand-dev">
+      <div class="row mt-3 mb-1 h-100">
+        <div class="col-md-5">
+          <h1 class="work-type"> ◼ Brand development</h1>
+          <h2 class="work-title mb-2 ">Hero Car Groomers Limited</h2>
+          <p class="work-desc mb-1">
+            Creation of brand identity for local car grooming business.
+          </p>
+  
+        </div>
+        <div class="col-md-7 mt-1 ">
+          <div class="container bg-color">
+            <img src="images/Hero Car Groomers Logo-min.png" alt="Hero car groomers logo"
+              class="img-fluid rounded sample-img" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container-fluid ">
+    <div class="web-dev">
+      <div class="row mt-3 mb-1 h-100">
+        <div class="col-md-5">
+          <h1 class="work-type"> ◼ Web development</h1>
+          <h2 class="work-title mb-2 ">Real Rack first website</h2>
+          <p class="work-desc mb-1">
+            Design and creation of Real Rack's first business website using CMS allowing basic order function without
+            overheads of
+            e-commerce.
+          </p>
+  
+        </div>
+        <div class="col-md-7 mt-1 ">
+          <div class="container bg-color">
+            <img src="images/RealRack website-min.PNG" alt="Real Rack first website"
+              class="img-fluid rounded sample-img" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container-fluid ">
+    <div class="print-dev">
+      <div class="row mt-3 mb-3  h-100">
+        <div class="col-md-5">
+          <h1 class="work-type"> ◼ Print design</h1>
+          <h2 class="work-title mb-2 ">Physio on Cashel</h2>
+          <p class="work-desc mb-1">
+            Creation of letter head email signature and flyer following existing branding.
+          </p>
+  
+        </div>
+        <div class="col-md-7 mt-1 ">
+          <div class="container bg-color">
+            <img src="images/Physio on Cashel email signature-min.PNG" alt="email signature for Physio on Cashel"
+              class="img-fluid rounded sample-img" width="400" height="250" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container-fluid ">
+    <div class="brand-dev">
+      <div class="row mt-3 mb-1 h-100">
+        <div class="col-md-5">
+          <h1 class="work-type"> ◼ Brand development</h1>
+          <h2 class="work-title mb-2">DISA Solutions Ltd</h2>
+          <p class="work-desc mb-1">
+            Creation of functional document templates and additional logo following current company branding.
+          </p>
+  
+        </div>
+        <div class="col-md-7 mt-1 ">
+          <div class="container bg-color">
+            <img src="images/Motorbike logo DISA Solutions.PNG" alt="Disa valuation logo"
+              class="img-fluid rounded sample-img" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
 </body>
 
 </html>
