--- a/services.html
+++ b/services.html
@@ -1,27 +1,73 @@
 <!DOCTYPE html>
-<html> 
-  <head>
-    <title>The Services we offer - Creafix Design
-    </title>
-    <meta charset="UTF-8" />
-  <meta name="description" content="insert here">
-    <link href="src/styles.css" rel="stylesheet" type="text/css" />
-      <!-- CSS only -->
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-      <!-- JavaScript Bundle with Popper -->
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<html>
+
+<head>
+  <title>The list of services we offer - Creafix Design
+  </title>
+  <meta charset="UTF-8" />
+  <meta name="description"
+    content="Welcome to Creafix Design, have a look at what we do and check out a selection of projects we've worked on!">
+
+  <link href="src/styles.css" rel="stylesheet" type="text/css" />
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jura:wght@500&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Spinnaker&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/b013160931.js" crossorigin="anonymous"></script>
-      </head>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <meta name="viewport" content="width-device-width, initial-scale=1.0">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script>
+    var num = 200; //number of pixels before modifying styles
+
+    $(window).bind("scroll", function () {
+      if ($(window).scrollTop() > num) {
+        $(".menu").addClass("fixed");
+      } else {
+        $(".menu").removeClass("fixed");
+      }
+    });
+
+    $(function () {
+      $(".toggle").on("click", function () {
+        if ($(".item").hasClass("active")) {
+          $(".item").removeClass("active");
+        }
+        else {
+          $(".item").addClass("active");
+        }
+      })
+    });
+
+  </script>
+</head>
+
+<body>
+  <nav>
+    <ul class="menu">
+      <li class="logo"> <a href="index.html"><img src="/images/Creafix logo white simple.png" alt="creafix design logo"
+            width="150" /></a></li>
+      <li class="item"> <a href="index.html#about">About</a></li>
+      <li class="item"> <a href="mywork.html">Work</a></li>
+      <li class="item"> <a href="services.html">Services</a></li>
+      <li class="item"> <a href="index.html#contact">Contact</a></li>
+      <li class="toggle"> <span class="bars"></span></li>
+
+
+    </ul>
+  </nav>
+
+
+
   
-  <body>
     </body>
 
 </html>
