--- a/mywork.html
+++ b/mywork.html
@@ -25,6 +25,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Spinnaker&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <meta name="viewport" content="width-device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/b013160931.js" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script>
     var num = 200; //number of pixels before modifying styles
@@ -56,6 +57,7 @@
     <ul class="menu">
       <li class="logo"> <a href="index.html"><img src="/images/Creafix logo white simple.png" alt="creafix design logo"
             width="150" /></a></li>
+            <li class="item"> <a href="index.html">Home</a></li>
       <li class="item"> <a href="index.html#about">About</a></li>
       <li class="item"> <a href="mywork.html">Work</a></li>
       <li class="item"> <a href="services.html">Services</a></li>
@@ -70,7 +72,6 @@
 <div class="title">
   <h3 class="title">Projects</h3>
 </div>
-
 <div class="bottom-line-title"></div>
 <div class="container-fluid ">
   <div class="web-dev">
@@ -220,5 +221,12 @@
 
 
 </body>
+<footer>
+  <div class="social-links d-flex justify-content-center">
+    <a href="#"><i class="fab fa-facebook"></i></a>
+    <a href="#"><i class="fab fa-github"></i></a>
+    <a href="#"><i class="fab fa-instagram"></i></a>
+  </div>
 
+</footer>
 </html>
