--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Spinnaker&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <meta name="viewport" content="width-device-width, initial-scale=1.0">
+<script src="https://kit.fontawesome.com/b013160931.js" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script>
   var num = 200; //number of pixels before modifying styles
@@ -52,6 +53,7 @@
 <nav> 
   <ul class="menu">
 <li class="logo"> <a href="index.html"><img src="/images/Creafix logo white simple.png" alt="creafix design logo" width="150"/></a></li>
+<li class="item"> <a href="index.html">Home</a></li>
 <li class="item"> <a href="index.html#about">About</a></li>
 <li class="item"> <a href="mywork.html">Work</a></li>
 <li class="item"> <a href="services.html">Services</a></li>
@@ -93,7 +95,7 @@
 <div class="bottom-line-title"></div>
 <div class="container-fluid ">
   <div class="about-box">
-    <h2 class="bio-title mb-2 ">Who am I?</h2>
+    <h2 class="bio-title">Who am I?</h2>
     <div class="row mt-2 mb-1 h-100">
       <div class="col-md-5  ">
          <div class="bio-container">
@@ -165,7 +167,7 @@
       </div>
       <div class="col-md-7 mt-1 ">
         <div class="container bg-color">
-          <img src="images/Intech catalogue.jpg" alt="catalogue template Intech image" class="img-fluid rounded sample-img" width="400" height="250"  />
+          <img src="images/Intech catalogue.jpg" alt="catalogue template Intech image" class="img-fluid rounded sample-img large-img"   />
         </div>
       </div>
     </div>
@@ -190,7 +192,11 @@
       </div>
     </div>
   </div>
-
+<div class="row mt-2 g-0">
+  <div class="col-12  contact-button">
+    <a href="mywork.html" class="contact-link">View more projects</a>
+  </div>
+</div>
 
 <div class="top-line-title" id="contact"></div>
 <div class="title">
@@ -208,7 +214,12 @@
 
 </body>
 <footer>
-  <p> Terms and conditions</p>
+ <div class="social-links d-flex justify-content-center"> 
+<a href="#"><i class="fab fa-facebook"></i></a>
+<a href="#"><i class="fab fa-github"></i></a>
+<a href="#"><i class="fab fa-instagram"></i></a>
+</div>
+  
 </footer>
 
 </html>
