--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
 <body>
 <nav> 
   <ul class="menu">
-<li class="logo"> <a href="index.html"><img src="/images/Creafix logo white simple.png" alt="creafix design logo" width="150"/></a></li>
-<li class="item"> <a href="index.html">Home</a></li>
-<li class="item"> <a href="index.html#about">About</a></li>
-<li class="item"> <a href="mywork.html">Work</a></li>
-<li class="item"> <a href="services.html">Services</a></li>
-<li class="item"> <a href="index.html#contact">Contact</a></li>
+<li class="logo"> <a href="index.html" title="Homepage logo"><img src="/images/Creafix logo white simple.png" alt="creafix design logo" width="150"/></a></li>
+<li class="item"> <a href="index.html"title="Homepage">Home</a></li>
+<li class="item"> <a href="index.html#about"title="About">About</a></li>
+<li class="item"> <a href="mywork.html"title="My Work">Work</a></li>
+<li class="item"> <a href="services.html" title="Services">Services</a></li>
+<li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
 <li class="toggle"> <span class="bars"></span></li>
 
 
@@ -83,7 +83,7 @@
   </div>
   <div class="row mt-2 g-0">
     <div class="col-12  contact-button">
-    <a href="index.html#contact" class="contact-link">Get in touch</a> 
+    <a href="index.html#contact" class="contact-link" title="Contact me">Get in touch</a> 
       </div>
       </div>
 </div>
@@ -130,7 +130,7 @@
 </div>
 <div class="row mt-2 g-0">
   <div class="col-12  contact-button">
-    <a href="index.html#contact" class="contact-link">Work with me</a>
+    <a href="index.html#contact" class="contact-link" title="Contact me">Work with me</a>
   </div>
 </div>
 <div class="top-line-title" id="work"></div>
@@ -193,7 +193,7 @@
   </div>
 <div class="row mt-2 g-0">
   <div class="col-12  contact-button">
-    <a href="mywork.html" class="contact-link">View more projects</a>
+    <a href="mywork.html" class="contact-link" title="View my other projects">View more projects</a>
   </div>
 </div>
 
@@ -203,7 +203,7 @@
 </div>
 <div class="bottom-line-title"></div>
 <div>
-  <a href="mailto:hello@creafixdesign.com" class="email-link"> hello@creafixdesign.com </a>
+  <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me"> hello@creafixdesign.com </a>
 </div>
 
 
@@ -214,9 +214,9 @@
 </body>
 <footer>
  <div class="social-links d-flex justify-content-center"> 
-<a href="#"><i class="fab fa-facebook"></i></a>
-<a href="#"><i class="fab fa-github"></i></a>
-<a href="#"><i class="fab fa-instagram"></i></a>
+<a href="#" title="Facebook page"><i class="fab fa-facebook"></i></a>
+<a href="#" title="Github profile"><i class="fab fa-github"></i></a>
+<a href="#"title="Instagram profile"><i class="fab fa-instagram"></i></a>
 </div>
   
 </footer>
