--- a/mywork.html
+++ b/mywork.html
@@ -55,14 +55,14 @@
 <body>
   <nav>
     <ul class="menu">
-      <li class="logo"> <a href="index.html"><img src="/images/Creafix logo white simple.png" alt="creafix design logo"
-            width="150" /></a></li>
-            <li class="item"> <a href="index.html">Home</a></li>
-      <li class="item"> <a href="index.html#about">About</a></li>
-      <li class="item"> <a href="mywork.html">Work</a></li>
-      <li class="item"> <a href="services.html">Services</a></li>
-      <li class="item"> <a href="index.html#contact">Contact</a></li>
-      <li class="toggle"> <span class="bars"></span></li>
+    <li class="logo"> <a href="index.html" title="Homepage logo"><img src="/images/Creafix logo white simple.png"
+          alt="creafix design logo" width="150" /></a></li>
+    <li class="item"> <a href="index.html" title="Homepage">Home</a></li>
+    <li class="item"> <a href="index.html#about" title="About">About</a></li>
+    <li class="item"> <a href="mywork.html" title="My Work">Work</a></li>
+    <li class="item"> <a href="services.html" title="Services">Services</a></li>
+    <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
+    <li class="toggle"> <span class="bars"></span></li>
   
   
     </ul>
@@ -223,9 +223,9 @@
 </body>
 <footer>
   <div class="social-links d-flex justify-content-center">
-    <a href="#"><i class="fab fa-facebook"></i></a>
-    <a href="#"><i class="fab fa-github"></i></a>
-    <a href="#"><i class="fab fa-instagram"></i></a>
+    <a href="#" title="Facebook page"><i class="fab fa-facebook"></i></a>
+    <a href="#" title="Github profile"><i class="fab fa-github"></i></a>
+    <a href="#" title="Instagram profile"><i class="fab fa-instagram"></i></a>
   </div>
 
 </footer>
