Temporarily removes links to social and updated descriptions  media

--- a/index.html
+++ b/index.html
@@ -214,9 +214,9 @@
 </body>
 <footer>
  <div class="social-links d-flex justify-content-center"> 
-<a href="#" title="Facebook page"><i class="fab fa-facebook"></i></a>
-<a href="#" title="Github profile"><i class="fab fa-github"></i></a>
-<a href="#"title="Instagram profile"><i class="fab fa-instagram"></i></a>
+<!--<a href="#" title="Facebook page"><i class="fab fa-facebook"></i></a>-->
+<a href="https://github.com/achevillat/audrey_portfolio.git" title="Github profile"><i class="fab fa-github"></i></a>
+<!--<a href="#"title="Instagram profile"><i class="fab fa-instagram"></i></a>-->
 </div>
   
 </footer>
