--- a/mywork.html
+++ b/mywork.html
@@ -7,7 +7,7 @@
 
   <meta charset="UTF-8" />
   <meta name="description"
-    content="Welcome to Creafix Design, have a look at what we do and check out a selection of projects we've worked on!">
+    content="Check out a selection of projects we've worked on!">
 
   <link href="src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
@@ -215,7 +215,11 @@
       </div>
     </div>
   </div>
-
+<div class="row mt-2 g-0">
+  <div class="col-12  contact-button">
+    <a href="index.html#contact" class="contact-link" title="Contact me">Work with me</a>
+  </div>
+</div>
 
 
 
@@ -223,9 +227,9 @@
 </body>
 <footer>
   <div class="social-links d-flex justify-content-center">
-    <a href="#" title="Facebook page"><i class="fab fa-facebook"></i></a>
-    <a href="#" title="Github profile"><i class="fab fa-github"></i></a>
-    <a href="#" title="Instagram profile"><i class="fab fa-instagram"></i></a>
+    <!--<a href="#" title="Facebook page"><i class="fab fa-facebook"></i></a>-->
+    <a href="https://github.com/achevillat/audrey_portfolio.git" title="Github profile"><i class="fab fa-github"></i></a>
+    <!--<a href="#"title="Instagram profile"><i class="fab fa-instagram"></i></a>-->
   </div>
 
 </footer>
