--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
   </title>
   <meta charset="UTF-8" />
   <meta name="description"
-    content="Welcome to Creafix Design, have a look at what we do and check out a selection of projects we've worked on!">
+    content="This is what we do and the services we offer">
 
   <link href="src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
@@ -78,9 +78,9 @@
     </body>
 <footer>
   <div class="social-links d-flex justify-content-center">
-    <a href="#" title="Facebook page"><i class="fab fa-facebook"></i></a>
-    <a href="#" title="Github profile"><i class="fab fa-github"></i></a>
-    <a href="#" title="Instagram profile"><i class="fab fa-instagram"></i></a>
+    <!--<a href="#" title="Facebook page"><i class="fab fa-facebook"></i></a>-->
+    <a href="https://github.com/achevillat/audrey_portfolio.git" title="Github profile"><i class="fab fa-github"></i></a>
+    <!--<a href="#"title="Instagram profile"><i class="fab fa-instagram"></i></a>-->
   </div>
 
 </footer>
