Added service page and accordion

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 <body>
 <nav> 
-  <ul class="menu">
+  <ul class="menu" id="navbar">
 <li class="logo"> <a href="index.html" title="Homepage logo"><img src="/images/Creafix logo white simple.png" alt="creafix design logo" width="150"/></a></li>
 <li class="item"> <a href="index.html"title="Homepage">Home</a></li>
 <li class="item"> <a href="index.html#about"title="About">About</a></li>
@@ -68,16 +68,16 @@
   <div class="row mt-5 g-0 intro">
     <div class="col-6 px-0 design">
 <h2 class="designer ">Hey </h2>
-<h1 class="designer"> I am</h1>
+<h3 class="designer"> I am</h3>
 <p><img src="/images/Colour-half.png" alt="half logo colour" class="image-fluid logo-intro"/></p>
-<h3 class="designer">Designer</h3>
+<h1 class="designer">Designer</h1>
 <p class="designer">Experienced graphic designer, visual whiz and brand creator  </p>
     </div>
 <div class="col-6 px-0 dev">
   <h2 class="developer ">there! </h2>
-  <h1 class="developer"> Audrey</h1>
+  <h3 class="developer"> Audrey</h3>
 <p><img src="/images/colour-other-half.png" alt=" second half logo colour" class="image-fluid logo-intro-2" /></p>
-  <h3 class="developer">Developer</h3>
+  <h1 class="developer">Developer</h1>
   <p class="developer">Experienced front end coder of responsive websites and web apps</p>
 </div>
   </div>
@@ -90,7 +90,7 @@
 
 <div class="top-line-title" id="about"></div>
 <div class="title" >
-  <h3 class="title">About me</h3>
+  <h1 class="title">About me</h1>
 </div>
 <div class="bottom-line-title"></div>
 <div class="container-fluid ">
@@ -134,13 +134,13 @@
   </div>
 </div>
 <div class="top-line-title" id="work"></div>
-<div class="title" > <h3 class="title">Projects highlights</h3></div>
+<div class="title" > <h1 class="title">Projects highlights</h1></div>
 <div class="bottom-line-title"></div>
 <div class="container-fluid ">
   <div class="web-dev">
   <div class="row mt-2 mb-1 h-100 ">
     <div class="col-md-5">
-      <h1 class="work-type"> ◼ Web development</h1>
+      <h3 class="work-type"> ◼ Web development</h3>
       <h2 class="work-title mb-2 ">Weather app</h2>
       <p class="work-desc mb-1">
         Design and coding of a web app integrating API to provide live weather update.
@@ -157,7 +157,7 @@
   <div class="print-dev">
     <div class="row mt-3 mb-3  h-100">
       <div class="col-md-5">
-        <h1 class="work-type"> ◼ Print design</h1>
+        <h3 class="work-type"> ◼ Print design</h3>
         <h2 class="work-title mb-2 ">Intech catalogue</h2>
         <p class="work-desc mb-1">
           Creation of a multi category product catalogue template.
@@ -176,7 +176,7 @@
     <div class="web-dev">
       <div class="row mt-3 mb-1 h-100">
         <div class="col-md-5">
-          <h1 class="work-type"> ◼ Web development</h1>
+          <h3 class="work-type"> ◼ Web development</h3>
           <h2 class="work-title mb-2 ">Casting technology NZ new website</h2>
           <p class="work-desc mb-1">
             Design and creation of a website using CMS allowing easy clients updates using database for member management.
@@ -199,7 +199,7 @@
 
 <div class="top-line-title" id="contact"></div>
 <div class="title">
-  <h3 class="title">Contact me</h3>
+  <h1 class="title">Contact me</h1>
 </div>
 <div class="bottom-line-title"></div>
 <div>
