--- a/services.html
+++ b/services.html
@@ -47,7 +47,7 @@
         }
       })
     });
-
+  
   </script>
 </head>
 
@@ -66,13 +66,107 @@
 
     </ul>
   </nav>
-<div class="top-line-title" id="about"></div>
+<div class="top-line-title"></div>
 <div class="title">
-  <h3 class="title">Services</h3>
+  <h1 class="title">Services</h1>
 </div>
 
 <div class="bottom-line-title"></div>
+<div id="accordion">
+  <div class="card">
+    <div class="card-header" id="headingOne">
+      <h4 class="mb-0">
+        <button class="btn" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true"
+          aria-controls="collapseOne">
+          Website Design & Development 
+        </button>
+      </h4>
+    </div>
 
+    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-bs-parent="#accordion">
+      <div class="card-body">
+        <p>I design static and dynamic websites depending on requirements. </p>
+       <p> This sevice includes recommendation whether a fully coded customised website is required or use of a CMS platform is more suitable. 
+        I'll take you through the entire process from createing the layout via wireframes to registering your domain, hosting and publishing your website for the world to see. 
+        I pay particular attention to optimising my designs for basic SEO, and I include strong considerations to the user interface and experience (UI/UX). 
+        </p>
+<!--<h1> Skills & Tools</h1>
+<div class="tools"> 
+<ul>
+<li>
+  <i class="fab fa-html5"></i>
+</li>
+<li>
+  <i class="fab fa-css3-alt"></i>
+</li>
+<li>
+<i class="fab fa-js"></i>
+</li>
+<li>
+<i class="fab fa-react"></i>
+</li>
+<li>
+<i class="fab fa-github"></i>
+</li>
+<li>
+<i class="fas fa-cogs"></i>
+</li>
+<li>
+<img src="images/vscode.svg"/>
+</li>
+<li>
+<i class="fas fa-phone-laptop"></i>
+</li>
+<li>
+
+</li>
+<li>
+
+</li>
+<li>
+
+</li>
+
+</ul>
+
+</div>-->
+
+      </div>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-header" id="headingTwo">
+      <h4 class="mb-0">
+        <button class="btn collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false"
+          aria-controls="collapseTwo"> Marketing & Print Design
+        </button>
+      </h4>
+    </div>
+    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-bs-parent="#accordion">
+      <div class="card-body">
+        <p> I provide marketing support and can create catalogues, brochures/leaflets, flyers/posters to promote your business.
+        I can help you create graphics for prints or web use as well as infographics to suit your needs. 
+      </p>
+      </div>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-header" id="headingThree">
+      <h4 class="mb-0">
+        <button class="btn collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false"
+          aria-controls="collapseThree">
+          Visual Identity & Branding
+        </button>
+      </h4>
+    </div>
+    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-bs-parent="#accordion">
+      <div class="card-body">
+      <p>I create logo, branding and colour palette to create a brand identity that best represents you.
+      I provide the branding guidelines along with business cards design or letterheads.
+      </p></div>
+    </div>
+  </div>
+</div>
 
 
     </body>
